--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row">
                 <h3 class="text-center">Open The GiftBox</h3>
-                <a class="text-center  fc-white" href="party.html"><button class="btn fs-3 border text-light ">&#x1F381;</button></a>
+                <a class="text-center  fc-white mb-5" href="party.html"><button class="btn fs-3 border text-light ">&#x1F381;</button></a>
             </div>
         </div>
     </section>
